# goldfish

./: .gitignore  Cargo.toml  rustfmt.toml
crates/game/: Cargo.toml  build.rs
crates/game/shaders/: common.hlsli  debug_depth.hlsl  fullscreen.hlsl  light_cull_compute.hlsl  new_material.mat  pbr.glsl  skybox.glsl  test.compute  test_compute.hlsl  test_sampler.hlsl  test_shader.hlsl  utils.hlsli
crates/game/src/: lib.rs
crates/goldfish/: Cargo.toml
crates/goldfish/src/editor/: asset.rs  editor.rs  mesh_importer.rs  shader_compiler.rs
crates/goldfish/src/engine/: lib.rs  package.rs  types.rs  window.rs
crates/goldfish/src/engine/game/: mod.rs
crates/goldfish/src/engine/renderer/: mod.rs  render_graph.rs
crates/goldfish/src/engine/renderer/backends/vulkan/: buffer.rs  command_pool.rs  descriptor.rs  device.rs  fence.rs  framebuffer.rs  mod.rs  pipeline.rs  render_pass.rs  semaphore.rs  shader.rs  swapchain.rs  texture.rs
crates/goldfish/src/engine/tracy_gpu/: mod.rs
goldfish-derive/: Cargo.toml
goldfish-derive/src/: lib.rs
src/: main.rs  types.rs  window.rs
src/editor/: asset.rs  editor.rs  mesh_importer.rs  shader_compiler.rs
src/engine/: lib.rs  package.rs  types.rs  window.rs
src/engine/renderer/: mod.rs
src/engine/renderer/backends/vulkan/: buffer.rs  command_buffer.rs  command_pool.rs  device.rs  fence.rs  framebuffer.rs  mod.rs  pipeline.rs  render_pass.rs  semaphore.rs  shader.rs  swapchain.rs  texture.rs
src/engine/tracy_gpu/: mod.rs
src/renderer/: mod.rs
src/renderer/backends/: mod.rs
src/renderer/backends/vulkan/: device.rs  swapchain.rs
