[package]
name = "goldfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0+1.3.209", default-features = false, features = [
	"linked",
	"debug",
] }
winit = "0.27.4"
raw-window-handle = "0.5.0"
ash-window = "0.11.0"
gpu-allocator = "0.20.0"
bevy_reflect = "0.8.1"
custom_error = "1.9.2"

[lib]
name = "goldfish"
path = "src/engine/lib.rs"

[[bin]]
name = "goldfish_editor"
path = "src/editor/editor.rs"
