[package]
name = "goldfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0+1.3.209", default-features = false, features = [
	"linked",
	"debug",
] }
winit = "0.27.4"
raw-window-handle = "0.5.0"
ash-window = "0.11.0"
gpu-allocator = "0.20.0"
bevy_reflect = "0.8.1"
custom_error = "1.9.2"
glam = "0.21.3"
bitflags = "2.0.0-rc.1"
rand = "0.8.5"
russimp = { version = "1.0.4", default-features = false, features = [
	"prebuilt",
] }
uuid = "1.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
filetime = "0.2"
thiserror = "1.0.37"
scopeguard = "1.1.0"
bytemuck = { version = "1.4", features = ["derive"] }
hassle-rs = "0.9.0"
rspirv = "0.7" # note: patched over for latest RT
rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f98cbfb5c7ee3aa1347158670a9b8ec5bf5" }
anyhow = "1.0.66"
tracy-client = "0.15.0"
tracy-client-sys = "0.19.0"
bincode = "1.3.3"
bytes = "1.3.0"
memoffset = "0.8"
libloading = "0.7.4"
byteorder = "1.4.3"
im = "15.1.0"
derive_builder = "0.12.0"
phf = "0.11.1"

[lib]
name = "goldfish"
path = "src/engine/lib.rs"

[[bin]]
name = "goldfish_editor"
path = "src/editor/editor.rs"
